syntax = "proto3";

import "container.proto";

option go_package = "pb";

message DockerHost {
    string ip = 1;
    string name = 2;
    string colorCode = 3;
}

message HostContainerCount {
    map<string, int32> containers = 1;
}

message GetContainersCountRequest {
    repeated string hosts = 1;
    bool all = 2;
}

message GetContainersCountResponse {
    repeated HostContainerCount hostContainers = 1;
}

message GetContainersRequest {
    string host = 1;
}

message GetContainersResponse {
    repeated Container containers = 1;
}

message GetStatsRequest {
    map<string, int32> containers = 1;
    string  host = 2;
}

message GetStatsReponse {
    map<int32, float> stats = 1;
}

service DockerHostService {
    rpc GetContainersCount(GetContainersCountRequest) returns (GetContainersCountResponse);
    rpc GetContainers(GetContainersRequest) returns (GetContainersResponse);
    rpc GetStats(GetStatsRequest) returns (stream GetStatsReponse);
}
